crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__bom.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        Name(
            "x",
        ),
        3..4,
    ),
    (
        Equal,
        5..6,
    ),
    (
        Int(
            1,
        ),
        7..8,
    ),
    (
        Newline,
        8..8,
    ),
]
```
