crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__bom_with_offset_edge.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: "lex_source_with_offset(source, TextSize::new(11))"
---
## Tokens
```
[
    (
        Name(
            "z",
        ),
        11..12,
    ),
    (
        Newline,
        12..12,
    ),
]
```
